[sc-8198] Move private KB warning in code snippet overlay
Display a confirmation dialog when copying a private KB snippet

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -1023,7 +1023,8 @@
 	"widget.generator.presets.widget-location.question": "On es trobarà aquest giny de cerca?",
 	"widget.generator.presets.widget-location.title": "Ubicació del widget",
 	"widget.generator.preview": "Vista prèvia",
-	"widget.generator.private-kb-warning.description": "Si el contingut del Knowledge Box ha de ser públic, podeu publicar-lo des de",
+	"widget.generator.private-kb-warning.description": "Si el contingut del Knowledge Box és públic, el propietari del Knowledge Box el pot publicar des de la pàgina de configuració.",
+	"widget.generator.private-kb-warning.description-admin": "Si el contingut del Knowledge Box és públic, podeu publicar-lo des de la pàgina de configuració.",
 	"widget.generator.private-kb-warning.link": "Pàgina inicial",
 	"widget.generator.private-kb-warning.snippet": "No exposeu una clau API en un lloc web públic o no segur",
 	"widget.generator.private-kb-warning.title": "El vostre Knowledge Box és privat, no incrusteu aquest widget en una pàgina web pública o no segura.",
