--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -1024,7 +1024,8 @@
 	"widget.generator.presets.widget-location.question": "Where will this search widget be located?",
 	"widget.generator.presets.widget-location.title": "Widget location",
 	"widget.generator.preview": "Preview",
-	"widget.generator.private-kb-warning.description": "If the Knowledge Box content is meant to be public, you can publish it from the",
+	"widget.generator.private-kb-warning.description": "If the Knowledge Box content is meant to be public, the Knowledge Box owner can publish it from the settings page.",
+	"widget.generator.private-kb-warning.description-admin": "If the Knowledge Box content is meant to be public, you can publish it from the settings page.",
 	"widget.generator.private-kb-warning.link": "home page",
 	"widget.generator.private-kb-warning.snippet": "Don't expose an API key on a public or unsafe website",
 	"widget.generator.private-kb-warning.title": "Your Knowledge Box is private, do not embed this widget in a public or unsafe web page.",
