--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -1023,7 +1023,8 @@
 	"widget.generator.presets.widget-location.question": "¿Dónde se ubicará este widget de búsqueda?",
 	"widget.generator.presets.widget-location.title": "Ubicación del widget",
 	"widget.generator.preview": "Previsualizar",
-	"widget.generator.private-kb-warning.description": "Si el contenido de Knowledge Box está destinado a ser público, puede publicarlo desde la",
+	"widget.generator.private-kb-warning.description": "Si el contenido de Knowledge Box está destinado a ser público, el propietario de Knowledge Box puede publicarlo desde la página de configuración.",
+	"widget.generator.private-kb-warning.description-admin": "Si el contenido del Knowledge Box está destinado a ser público, puede publicarlo desde la página de configuración.",
 	"widget.generator.private-kb-warning.link": "Página de inicio",
 	"widget.generator.private-kb-warning.snippet": "No exponga una clave API en un sitio web público o inseguro",
 	"widget.generator.private-kb-warning.title": "Su Knowledge Box es privado, no inserte este widget en una página web pública o insegura.",
