--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -1024,7 +1024,8 @@
 	"widget.generator.presets.widget-location.question": "Où sera situé ce widget de recherche ?",
 	"widget.generator.presets.widget-location.title": "Emplacement du widget",
 	"widget.generator.preview": "Aperçu",
-	"widget.generator.private-kb-warning.description": "Si le contenu de la Knowledge Box est destiné à être public, vous pouvez le publier à partir du",
+	"widget.generator.private-kb-warning.description": "Si le contenu de la Knowledge Box est destiné à être public, le propriétaire de la Knowledge Box peut la publier à partir de la page des paramètres.",
+	"widget.generator.private-kb-warning.description-admin": "Si le contenu de la Knowledge Box est destiné à être public, vous pouvez le publier à partir de la page des paramètres.",
 	"widget.generator.private-kb-warning.link": "Page d'accueil",
 	"widget.generator.private-kb-warning.snippet": "N'exposez pas une clé API sur un site Web public ou non sécurisé",
 	"widget.generator.private-kb-warning.title": "Votre Knowledge Box est privée, n'intégrez pas ce widget dans une page Web publique ou non sécurisée.",
