[sc-8131] New Label sets page layout

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -460,23 +460,29 @@
 	"label-set.delete.confirm-title": "Esteu segur que voleu suprimir el conjunt d'etiquetes \"{{labelset}}\"?",
 	"label-set.delete.label": "Suprimeix el conjunt d'etiquetes",
 	"label-set.edit": "Edita el conjunt d'etiquetes",
-	"label-set.form.exclusive": "Etiqueta exclusiva",
-	"label-set.form.exclusive-checkbox": "Afegiu només una etiqueta per conjunt d'etiquetes",
-	"label-set.form.exclusive-description": "Per defecte, un recurs/bloc de text pot tenir diverses etiquetes d'un mateix conjunt d'etiquetes.",
-	"label-set.form.kind": "Tipus de conjunt d'etiquetes",
+	"label-set.form.exclusive.checkbox": "Afegiu només una etiqueta per conjunt d'etiquetes",
+	"label-set.form.exclusive.description": "Per defecte, un recurs/bloc de text pot tenir diverses etiquetes d'un mateix conjunt d'etiquetes.",
+	"label-set.form.exclusive.label": "Etiqueta exclusiva",
+	"label-set.form.kind": "Aplicar etiquetes a:",
 	"label-set.form.kind-warning": "Aquesta propietat no es pot modificar després.",
 	"label-set.form.labels.duplicated-name": "Nom de l'etiqueta duplicat",
+	"label-set.form.labels.duplicated-name-in-list": "La llista d'etiquetes conté un nom d'etiqueta duplicat",
+	"label-set.form.labels.grid-help": "Premeu Intro per afegir una etiqueta nova",
+	"label-set.form.labels.list-help": "Llista les etiquetes separades per comes",
 	"label-set.form.labels.naming-constraint": "No es permeten claudàtors",
-	"label-set.form.labels.title": "Etiquetes",
-	"label-set.form.labels-description": "Creeu i ordeneu les etiquetes que formen part d'aquest conjunt d'etiquetes.",
+	"label-set.form.labels.title": "Llista d'etiquetes",
 	"label-set.form.name": "Nom del conjunt d'etiquetes",
 	"label-set.form.name-invalid": "El nom del conjunt d'etiquetes no és vàlid",
 	"label-set.form.name-required": "El nom del conjunt d'etiquetes és obligatori",
+	"label-set.no-label-set": "Aquí és on veureu les vostres etiquetes quan creeu un conjunt d'etiquetes.",
 	"label-set.paragraphs": "Blocs de text",
 	"label-set.resources": "Recursos",
 	"label-set.selections": "Seleccions",
 	"label-set.subtitle": "Exploreu i editeu conjunts d'etiquetes",
 	"label-set.title": "Conjunts d'etiquetes",
+	"label-set.type.resource-title": "Etiquetes de recursos",
+	"label-set.type.selection-title": "Etiquetes de selecció",
+	"label-set.type.text-block-title": "Etiquetes de bloc de text",
 	"language.ca": "Català",
 	"language.cs": "Txec",
 	"language.da": "Danès",
