--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -460,23 +460,29 @@
 	"label-set.delete.confirm-title": "¿Está seguro de que desea eliminar el conjunto de etiquetas \"{{labelset}}\"?",
 	"label-set.delete.label": "Eliminar conjunto de etiquetas",
 	"label-set.edit": "Editar conjunto de etiquetas",
-	"label-set.form.exclusive": "Etiqueta exclusiva",
-	"label-set.form.exclusive-checkbox": "Agregar solo una etiqueta por conjunto de etiquetas",
-	"label-set.form.exclusive-description": "Por defecto, un recurso / bloque de texto puede tener varias etiquetas de un mismo conjunto de etiquetas.",
-	"label-set.form.kind": "Tipo de conjunto de etiquetas",
+	"label-set.form.exclusive.checkbox": "Agregar solo una etiqueta por conjunto de etiquetas",
+	"label-set.form.exclusive.description": "Por defecto, un recurso / bloque de texto puede tener varias etiquetas de un mismo conjunto de etiquetas.",
+	"label-set.form.exclusive.label": "Etiqueta exclusiva",
+	"label-set.form.kind": "Aplicar etiquetas a:",
 	"label-set.form.kind-warning": "Esta propiedad no se puede modificar posteriormente.",
 	"label-set.form.labels.duplicated-name": "Nombre de etiqueta duplicado",
+	"label-set.form.labels.duplicated-name-in-list": "La lista de etiquetas contiene un nombre de etiqueta duplicado.",
+	"label-set.form.labels.grid-help": "Presione Enter para agregar una nueva etiqueta",
+	"label-set.form.labels.list-help": "Enumere las etiquetas separadas por comas",
 	"label-set.form.labels.naming-constraint": "No se permiten corchetes",
-	"label-set.form.labels.title": "Etiquetas",
-	"label-set.form.labels-description": "Cree y ordene las etiquetas que forman parte de este conjunto de etiquetas.",
+	"label-set.form.labels.title": "Lista de etiquetas",
 	"label-set.form.name": "Nombre del conjunto de etiquetas",
 	"label-set.form.name-invalid": "Nombre de conjunto de etiquetas no válido",
 	"label-set.form.name-required": "El nombre del conjunto de etiquetas es obligatorio",
+	"label-set.no-label-set": "Aquí es donde verá sus etiquetas cuando cree un conjunto de etiquetas.",
 	"label-set.paragraphs": "Bloques de texto",
 	"label-set.resources": "Recursos",
 	"label-set.selections": "Selección",
 	"label-set.subtitle": "Examinar y editar conjuntos de etiquetas",
 	"label-set.title": "Conjuntos de etiquetas",
+	"label-set.type.resource-title": "Etiquetas de recursos",
+	"label-set.type.selection-title": "Etiquetas de selección",
+	"label-set.type.text-block-title": "Etiquetas de bloques de texto",
 	"language.ca": "Catalán",
 	"language.cs": "Checo",
 	"language.da": "Danés",
