[sc-8206] Improve AI copilot modal
- replace dialog by advanced modal
  - make the modal not dismissable
  - adapt its height to its content
- use textarea for topic
- all textarea resizable and displaying 2 lines of text by default
- restore prompt in the modal whenever it was applied once
- add ability to filter by labels

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -923,12 +923,14 @@
 	"user.logout": "Sortir",
 	"validation.name_required": "Introdueix el nom i cognoms",
 	"validation.url_required": "Introdueix una URL vàlida (per exemple https://nuclia.com)",
+	"widget.copilot.add-label-filters": "Afegiu filtres per etiquetes",
 	"widget.copilot.agent": "Definició d'agent",
 	"widget.copilot.agent-placeholder": "Exemple: Guia turística",
 	"widget.copilot.apply": "Aplicar",
 	"widget.copilot.description": "Creeu i definiu el vostre Copilot IA definint un comportament que generarà el prompt de l'usuari.",
 	"widget.copilot.filters": "Filtres",
 	"widget.copilot.generate": "Genera un prompt d'usuari",
+	"widget.copilot.generating": "S'està generant un prompt d'usuari...",
 	"widget.copilot.prompt": "Prompt",
 	"widget.copilot.title": "Crea el teu AI Copilot",
 	"widget.copilot.topic": "Tema",
@@ -1003,8 +1005,9 @@
 	"widget.generator.presets.ask.what-to-show.only-answer": "Només la resposta",
 	"widget.generator.presets.ask.what-to-show.question": "Què vols mostrar?",
 	"widget.generator.presets.ask.what-to-show.title": "Sortida de resposta",
-	"widget.generator.presets.copilot.create-copilot-button": "Crea un copilota AI",
+	"widget.generator.presets.copilot.create-copilot-button": "Crea un copilot IA",
 	"widget.generator.presets.copilot.description": "Un agent LLM, també anomenat copilot d'IA, no només ha de poder interactuar amb un usuari mitjançant una conversa semblant a un humà, sinó que també es comporta segons un objectiu determinat. Afectarà el seu to, el seu estil, el seu vocabulari, el seu domini d'experiència o fins i tot les seves opinions.",
+	"widget.generator.presets.copilot.edit-copilot-button": "Editeu el vostre copilot AI",
 	"widget.generator.presets.copilot.question": "Vols definir un copilota AI?",
 	"widget.generator.presets.copilot.title": "Copilota AI",
 	"widget.generator.presets.description": "Seleccioneu un dels valors predefinits o personalitzeu el vostre a la pestanya \"Avançat\".",
