--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -924,12 +924,14 @@
 	"user.logout": "Log out",
 	"validation.name_required": "Add your name and surnames",
 	"validation.url_required": "Enter a valid URL (e.g. https://nuclia.com)",
+	"widget.copilot.add-label-filters": "Add filters by labels",
 	"widget.copilot.agent": "Agent definition",
 	"widget.copilot.agent-placeholder": "Example: Tourist guide",
 	"widget.copilot.apply": "Apply",
 	"widget.copilot.description": "Create and define your AI Copilot by defining a behavior which will generate the user prompt.",
 	"widget.copilot.filters": "Filters",
 	"widget.copilot.generate": "Generate user prompt",
+	"widget.copilot.generating": "Generating user prompt…",
 	"widget.copilot.prompt": "Prompt",
 	"widget.copilot.title": "Create your AI Copilot",
 	"widget.copilot.topic": "Topic",
@@ -1006,6 +1008,7 @@
 	"widget.generator.presets.ask.what-to-show.title": "Answer output",
 	"widget.generator.presets.copilot.create-copilot-button": "Create an AI copilot",
 	"widget.generator.presets.copilot.description": "An LLM agent – also called AI copilot – is meant to not only be able to interact with a user through a human-like conversation, but also to behave according to a given goal. It will impact its tone, its style, its vocabulary, its domain of expertise, or even its opinions.",
+	"widget.generator.presets.copilot.edit-copilot-button": "Edit your AI copilot",
 	"widget.generator.presets.copilot.question": "Do you want to define an AI Copilot?",
 	"widget.generator.presets.copilot.title": "AI Copilot",
 	"widget.generator.presets.description": "Select one of the presets or customize your own in the \"Advanced\" tab.",
