--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -923,12 +923,14 @@
 	"user.logout": "Salir",
 	"validation.name_required": "Añade tu nombre y apellidos",
 	"validation.url_required": "Introduce una URL válida (por ejemplo https://nuclia.com)",
+	"widget.copilot.add-label-filters": "Agregar filtros por etiquetas",
 	"widget.copilot.agent": "Definición del agente",
 	"widget.copilot.agent-placeholder": "Ejemplo: guía turística",
 	"widget.copilot.apply": "Aplicar",
 	"widget.copilot.description": "Cree y defina su Copilot IA definiendo un comportamiento que generará el prompt del usuario.",
 	"widget.copilot.filters": "Filtros",
 	"widget.copilot.generate": "Generar un prompt de usuario",
+	"widget.copilot.generating": "Generando prompt de usuario...",
 	"widget.copilot.prompt": "Prompt",
 	"widget.copilot.title": "Crea tu copiloto de IA",
 	"widget.copilot.topic": "Tema",
@@ -1005,6 +1007,7 @@
 	"widget.generator.presets.ask.what-to-show.title": "Salida de respuesta",
 	"widget.generator.presets.copilot.create-copilot-button": "Crear un copiloto IA",
 	"widget.generator.presets.copilot.description": "Un agente LLM, también llamado copiloto de IA, no sólo debe ser capaz de interactuar con un usuario a través de una conversación similar a la humana, sino también de comportarse de acuerdo con un objetivo determinado. Su tono, su estilo, su vocabulario, su dominio de especialización o incluso sus opiniones se verán afectados.",
+	"widget.generator.presets.copilot.edit-copilot-button": "Edita tu copiloto IA",
 	"widget.generator.presets.copilot.question": "¿Quiere definir un Copiloto AI?",
 	"widget.generator.presets.copilot.title": "Copiloto de IA",
 	"widget.generator.presets.description": "Seleccione uno de los ajustes preestablecidos o personalice el suyo propio en la pestaña \"Avanzado\".",
