--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -924,12 +924,14 @@
 	"user.logout": "Déconnexion",
 	"validation.name_required": "Ajoutez vos nom et prénom",
 	"validation.url_required": "Saisir une URL valide (par exemple https://nuclia.com)",
+	"widget.copilot.add-label-filters": "Ajouter des filtres par étiquettes",
 	"widget.copilot.agent": "Définition de l'agent",
 	"widget.copilot.agent-placeholder": "Exemple : guide touristique",
 	"widget.copilot.apply": "Appliquer",
 	"widget.copilot.description": "Créez et définissez votre copilote IA en définissant un comportement qui générera le prompt utilisateur.",
 	"widget.copilot.filters": "Filtres",
 	"widget.copilot.generate": "Générer un prompt utilisateur",
+	"widget.copilot.generating": "Génération d'un prompt utilisateur…",
 	"widget.copilot.prompt": "Prompt",
 	"widget.copilot.title": "Créez votre copilote IA",
 	"widget.copilot.topic": "Sujet",
@@ -1006,6 +1008,7 @@
 	"widget.generator.presets.ask.what-to-show.title": "Sortie de réponse",
 	"widget.generator.presets.copilot.create-copilot-button": "Créer un copilote IA",
 	"widget.generator.presets.copilot.description": "Un agent LLM – également appelé copilote IA – est censé non seulement pouvoir converser avec un utilisateur comme le ferait un humain, mais également se comporter selon un objectif donné. Elle impactera son ton, son style, son vocabulaire, son domaine d'expertise, ou encore ses opinions.",
+	"widget.generator.presets.copilot.edit-copilot-button": "Modifiez votre copilote IA",
 	"widget.generator.presets.copilot.question": "Voulez-vous définir un copilote IA ?",
 	"widget.generator.presets.copilot.title": "Copilote IA",
 	"widget.generator.presets.description": "Sélectionnez l'un des préréglages ou personnalisez le vôtre dans l'onglet \"Avancé\".",
