--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -469,7 +469,7 @@
 	"label-set.form.labels.duplicated-name-in-list": "La lista de etiquetas contiene un nombre de etiqueta duplicado.",
 	"label-set.form.labels.grid-help": "Presione Enter para agregar una nueva etiqueta",
 	"label-set.form.labels.list-help": "Enumere las etiquetas separadas por comas",
-	"label-set.form.labels.naming-constraint": "No se permiten corchetes",
+	"label-set.form.labels.naming-constraint": "No se permiten llaves ni barra diagonal",
 	"label-set.form.labels.title": "Lista de etiquetas",
 	"label-set.form.name": "Nombre del conjunto de etiquetas",
 	"label-set.form.name-invalid": "Nombre de conjunto de etiquetas no válido",
