[sc-8131] New Label sets page layout (#1232)
* [sc-8131] New Label sets page layout

* Put back pattern validator on label name

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -461,23 +461,29 @@
 	"label-set.delete.confirm-title": "Are you sure you want to delete \"{{labelset}}\" label set?",
 	"label-set.delete.label": "Delete label set",
 	"label-set.edit": "Edit label set",
-	"label-set.form.exclusive": "Exclusive label",
-	"label-set.form.exclusive-checkbox": "Add only one label by label set",
-	"label-set.form.exclusive-description": "By default, a resource / text block can have several labels from a same label set.",
-	"label-set.form.kind": "Label set type",
+	"label-set.form.exclusive.checkbox": "Add only one label by label set",
+	"label-set.form.exclusive.description": "By default, a resource / text block can have several labels from a same label set.",
+	"label-set.form.exclusive.label": "Exclusive label",
+	"label-set.form.kind": "Apply labels to:",
 	"label-set.form.kind-warning": "This property cannot be modified afterward.",
 	"label-set.form.labels.duplicated-name": "Duplicated label name",
-	"label-set.form.labels.naming-constraint": "Curly brackets not allowed",
-	"label-set.form.labels.title": "Labels",
-	"label-set.form.labels-description": "Create and sort the labels that are part of this label set.",
+	"label-set.form.labels.duplicated-name-in-list": "The label list contains a duplicated label name",
+	"label-set.form.labels.grid-help": "Press Enter to add a new label",
+	"label-set.form.labels.list-help": "List the labels comma-separated",
+	"label-set.form.labels.naming-constraint": "Curly brackets and slash not allowed",
+	"label-set.form.labels.title": "Labels list",
 	"label-set.form.name": "Label set name",
 	"label-set.form.name-invalid": "Invalid label set name",
 	"label-set.form.name-required": "Label set name is required",
+	"label-set.no-label-set": "This is where you will see your labels when you create a label set.",
 	"label-set.paragraphs": "Text blocks",
 	"label-set.resources": "Resources",
 	"label-set.selections": "Selections",
 	"label-set.subtitle": "Browse and edit label sets",
 	"label-set.title": "Label sets",
+	"label-set.type.resource-title": "Resource labels",
+	"label-set.type.selection-title": "Selection labels",
+	"label-set.type.text-block-title": "Text block labels",
 	"language.ca": "Catalan",
 	"language.cs": "Czech",
 	"language.da": "Danish",
