--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -461,23 +461,29 @@
 	"label-set.delete.confirm-title": "Êtes-vous sûr de vouloir supprimer le jeu d'étiquettes « {{labelset}} » ?",
 	"label-set.delete.label": "Supprimer le jeu d'étiquettes",
 	"label-set.edit": "Modifier le jeu d'étiquettes",
-	"label-set.form.exclusive": "Étiquette exclusive",
-	"label-set.form.exclusive-checkbox": "Ajouter une seule étiquette par jeu d'étiquettes",
-	"label-set.form.exclusive-description": "Par défaut, une ressource / un bloc de texte peut avoir plusieurs étiquettes issues d'un même jeu d'étiquettes.",
-	"label-set.form.kind": "Type de famille d'étiquettes",
+	"label-set.form.exclusive.checkbox": "Ajouter une seule étiquette par jeu d'étiquettes",
+	"label-set.form.exclusive.description": "Par défaut, une ressource / un bloc de texte peut avoir plusieurs étiquettes issues d'un même jeu d'étiquettes.",
+	"label-set.form.exclusive.label": "Étiquette exclusive",
+	"label-set.form.kind": "Appliquer les étiquettes à :",
 	"label-set.form.kind-warning": "Cette propriété ne pourra plus être modifiée par la suite.",
 	"label-set.form.labels.duplicated-name": "Nom d'étiquette en double",
-	"label-set.form.labels.naming-constraint": "Les accolades ne sont pas autorisées",
-	"label-set.form.labels.title": "Étiquettes",
-	"label-set.form.labels-description": "Créez et triez les étiquettes qui font partie de ce jeu d'étiquettes.",
+	"label-set.form.labels.duplicated-name-in-list": "La liste des étiquettes contient un nom d'étiquette en double",
+	"label-set.form.labels.grid-help": "Appuyez sur Entrée pour ajouter une nouvelle étiquette",
+	"label-set.form.labels.list-help": "Répertoriez les étiquettes séparées par des virgules",
+	"label-set.form.labels.naming-constraint": "Les accolades et les barres obliques ne sont pas autorisées",
+	"label-set.form.labels.title": "Liste des étiquettes",
 	"label-set.form.name": "Nom du jeu d'étiquettes",
 	"label-set.form.name-invalid": "Nom du jeu d'étiquettes non valide",
 	"label-set.form.name-required": "Le nom du jeu d'étiquettes est obligatoire",
+	"label-set.no-label-set": "C'est ici que vous verrez vos étiquettes lorsque vous créerez un jeu d'étiquettes.",
 	"label-set.paragraphs": "Blocs de texte",
 	"label-set.resources": "Ressources",
 	"label-set.selections": "Sélections",
 	"label-set.subtitle": "Parcourir et modifier des jeux d'étiquettes",
 	"label-set.title": "Jeux d'étiquettes",
+	"label-set.type.resource-title": "Étiquettes de ressources",
+	"label-set.type.selection-title": "Étiquettes de sélection",
+	"label-set.type.text-block-title": "Étiquettes de bloc de texte",
 	"language.ca": "Catalan",
 	"language.cs": "Tchèque",
 	"language.da": "Danois",
