[sc-8218] Get introspection data from NucliaDB Admin
- Add a menu in the top bar for NucliaDB Admin
- Move knowledge boxes link from the navbar to the new menu
- Add an option "Introspection data" in the menu downloading data from `/introspect` endpoint as a tar file.

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -741,6 +741,9 @@
 	"sidenav.upload-data": "Upload data",
 	"sidenav.users": "Users",
 	"sidenav.widgets": "Widgets",
+	"standalone.menu.button-label": "Menu",
+	"standalone.menu.introspect": "Introspection data",
+	"standalone.menu.kb-list": "Knowledge Boxes",
 	"standalone.new-version-available-toast": "A newer version of NucliaDB is available.",
 	"standalone.nua-key-status.invalid.how-to-get-nua-key": "If you don't have a NUA API Key follow this <a href=\"https://docs.nuclia.dev/docs/docs/getting-started/on-premise\" rel=\"noopener noreferrer\" target=\"_blank\">guide</a>.",
 	"standalone.nua-key-status.invalid.loading-error": "Error while loading Nuclia Understanding API key status",
