--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -741,6 +741,9 @@
 	"sidenav.upload-data": "Télécharger",
 	"sidenav.users": "Utilisateurs",
 	"sidenav.widgets": "Widgets",
+	"standalone.menu.button-label": "Menu",
+	"standalone.menu.introspect": "Données d'introspection",
+	"standalone.menu.kb-list": "Knowledge Boxes",
 	"standalone.new-version-available-toast": "Une version plus récente de NucliaDB est disponible.",
 	"standalone.nua-key-status.invalid.how-to-get-nua-key": "Si vous ne possédez pas de clé API NUA, suivez ce <a href=\"https://docs.nuclia.dev/docs/docs/getting-started/on-premise\" rel=\"noopener noreferrer\" target=\"_blank\">guide</a>.",
 	"standalone.nua-key-status.invalid.loading-error": "Erreur lors du chargement de l'état de la clé Nuclia Understanding API",
