--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -740,6 +740,9 @@
 	"sidenav.upload-data": "Subir datos",
 	"sidenav.users": "Usuarios",
 	"sidenav.widgets": "Widgets",
+	"standalone.menu.button-label": "Menú",
+	"standalone.menu.introspect": "Datos de introspección",
+	"standalone.menu.kb-list": "Knowledge Boxes",
 	"standalone.new-version-available-toast": "Hay disponible una versión más nueva de NucliaDB.",
 	"standalone.nua-key-status.invalid.how-to-get-nua-key": "Si no tiene una clave API de NUA, siga esta <a href=\"https://docs.nuclia.dev/docs/docs/getting-started/on-premise\" rel=\"noopener noreferrer\" target=\"_blank\">guía</a>.",
 	"standalone.nua-key-status.invalid.loading-error": "Error al cargar el estado de la clave Nuclia Understanding API",
