--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -790,6 +790,8 @@
 	"stash.create.in_progress": "Knowledge Box creation in progress…",
 	"stash.create.semantic_model.help": "Indicate the languages used in the information you will upload in your KB.",
 	"stash.create.semantic_model.label": "Languages",
+	"stash.create.summary_model.help": "Indicate the model used by the on-demand summarisation feature",
+	"stash.create.summary_model.label": "On-demand summarisation",
 	"stash.create.title": "Create a Knowledge Box",
 	"stash.create.user_prompts.examples": "Examples",
 	"stash.create.user_prompts.prompt": "Prompt",
