[sc-8177] SDK cleanup

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -22,7 +22,6 @@
 	"account.create_nua_key": "Creeu una nova clau Nuclia Understanding API",
 	"account.day_left": "Queda 1 dia",
 	"account.days_left": "Queden {{days}} dies",
-	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
 	"account.delete.error": "S'ha produït un error al eliminar el compte",
 	"account.delete.go_to": "Si vols eliminar el teu compte, si us plau ves a",
 	"account.delete.keep_user_title": "Vols mantenir el teu perfil d'usuari?",
@@ -64,6 +63,7 @@
 	"account.nua_key_activity_title": "{{key}} registre d'activitat",
 	"account.nua_key_delete": "Suprimir la clau de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Si suprimiu aquesta clau, es perdran tots els treballs en curs (si n'hi ha).",
+	"account.nua_key_zone": "Seleccioneu la zona i el proveïdor de processament que voleu utilitzar per a aquesta clau",
 	"account.nua_keys": "Claus de Nuclia Understanding API",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Un cop processades les teves dades, el resultat es publica a aquest URL",
@@ -799,7 +799,7 @@
 	"stash.create.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
 	"stash.create.visual_labeling.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
 	"stash.create.visual_labeling.label": "Anotar per selecció",
-	"stash.create.zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta Knowledge Box. De forma predeterminada apareix la zona escollida a l’Account",
+	"stash.create.zone_description": "Seleccioneu la zona i el proveïdor de processament que voleu utilitzar per a aquest Knowledge Box",
 	"stash.delete.delete": "Eliminar Knowledge Box?",
 	"stash.delete.error": "Error en crear el Knowledge Box",
 	"stash.delete.warning": "Si borres la Knowledge Box {{ kb }} també s'esborraran totes les dades que conté.",
