--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -22,7 +22,6 @@
 	"account.create_nua_key": "Crear una nueva clave Nuclia Understanding API",
 	"account.day_left": "Queda 1 día",
 	"account.days_left": "Quedan {{days}} días",
-	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
 	"account.delete.go_to": "Si quieres eliminar tu cuenta, por favor ve a",
 	"account.delete.keep_user_title": "¿Quieres mantener tu perfil de usuario?",
@@ -64,6 +63,7 @@
 	"account.nua_key_activity_title": "{{key}} registro de actividad",
 	"account.nua_key_delete": "Eliminar la clave de la Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Al eliminar esta clave, se perderán todos los trabajos en curso (si los hay).",
+	"account.nua_key_zone": "Seleccione la zona y el proveedor de procesamiento que le gustaría utilizar para esta clave",
 	"account.nua_keys": "Claves de Nuclia Understanding API",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
@@ -799,7 +799,7 @@
 	"stash.create.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
 	"stash.create.visual_labeling.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
 	"stash.create.visual_labeling.label": "Anotar por selección",
-	"stash.create.zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta Knowledge Box. De forma predeterminada aparece la zona escogida en el Account",
+	"stash.create.zone_description": "Seleccione la zona y el proveedor de procesamiento que le gustaría utilizar para este Knowledge Box",
 	"stash.delete.delete": "¿Eliminar Knowledge Box?",
 	"stash.delete.error": "Error al crear el Knowledge Box",
 	"stash.delete.warning": "Si eliminas la Knowledge Box {{ kb }} también se eliminaran todos los datos que contenga",
