--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -22,7 +22,6 @@
 	"account.create_nua_key": "Créer une nouvelle clé Nuclia Understanding API",
 	"account.day_left": "1 jour restant",
 	"account.days_left": " Il reste{{days}} jours",
-	"account.db_zone_description": "Sélectionnez la zone et le fournisseur de services de traitement que vous souhaitez utiliser pour ce compte (la zone du compte est sélectionnée par défaut).",
 	"account.delete.error": "Erreur lors de la suppression du compte",
 	"account.delete.go_to": "Si vous souhaitez supprimer votre compte, veuillez vous rendre à l'adresse suivante",
 	"account.delete.keep_user_title": "Vous souhaitez conserver votre profil d'utilisateur ?",
@@ -64,6 +63,7 @@
 	"account.nua_key_activity_title": "{{key}} journal d'activité",
 	"account.nua_key_delete": "Supprimer la clé Nuclia Understanding API",
 	"account.nua_key_delete_warning": "La suppression de cette clé entraîne la perte de tous les travaux en cours.",
+	"account.nua_key_zone": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette clé",
 	"account.nua_keys": "Clés Nuclia Understanding API",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Une fois vos données traitées, le résultat est affiché à l'adresse suivante",
@@ -800,7 +800,7 @@
 	"stash.create.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
 	"stash.create.visual_labeling.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
 	"stash.create.visual_labeling.label": "Annoter par sélection",
-	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette Knowledge Box (par défaut, la zone du compte)",
+	"stash.create.zone_description": "Sélectionnez la zone et le fournisseur de traitement que vous souhaitez utiliser pour cette Knowledge Box",
 	"stash.delete.delete": "Supprimer la Knowledge Box ?",
 	"stash.delete.error": "Erreur lors de la création de la Knowledge Box",
 	"stash.delete.warning": "Si vous supprimez la Knowledge Box {{ kb }}, toutes les données seront également supprimées",
